# ApplicationTemplate

./: .gitignore  CMakeLists.txt  README.md
Application/: CMakeLists.txt
Application/inc/: app.h  global.h
Application/inc/engine/: base_texture.h  base_vertex.h  logger.h  mat_base.h  mat_controller.h  mesh.h  model.h
Application/inc/file_system/: fs_helper.h
Application/inc/render/: gl_buffer.h  gl_camera.h  gl_framebuffer.h  gl_texture.h  render_core.h
Application/inc/render/gl/: gl_framebuffer.h  gl_mesh.h  gl_program.h  gl_texture.h
Application/inc/resources/: fonts_controller.h
Application/inc/ui/: ui_core.h  ui_layout.h  ui_nav_element.h  ui_viewport.h
Application/src/: app.cpp  main.cpp
Application/src/engine/: base_texture.cpp  logger.cpp  mat_controller.cpp  mesh.cpp  model.cpp
Application/src/file_system/: fs_helper.cpp
Application/src/render/: gl_buffer.cpp  gl_camera.cpp  gl_framebuffer.cpp  gl_mesh.cpp  gl_program.cpp  gl_texture.cpp  render_core.cpp
Application/src/render/gl/: gl_buffer.cpp  gl_camera.cpp  gl_framebuffer.cpp  gl_program.cpp  gl_texture.cpp
Application/src/resources/: fonts_controller.cpp  mat_controller.cpp
Application/src/ui/: ui_core.cpp  ui_nav_elements.cpp  ui_viewport.cpp
MasterOfDnD/: CMakeLists.txt
MasterOfDnD/inc/: app.h  global.h
MasterOfDnD/inc/engine/: logger.h
MasterOfDnD/inc/file_system/: fs_helper.h
MasterOfDnD/inc/render/: gl_buffer.h  gl_program.h  gl_texture.h  gl_vertex.h
MasterOfDnD/src/: app.cpp  main.cpp
MasterOfDnD/src/engine/: logger.cpp
MasterOfDnD/src/file_system/: fs_helper.cpp
MasterOfDnD/src/render/: gl_buffer.cpp  gl_program.cpp  gl_texture.cpp
Wiki/: win32_custom_proc.md
resources/materials/: base_mesh.mat
resources/shaders/: base.frag  base.vert  mesh_base.frag  mesh_base.vert  skybox.frag
